MDA-222 - Collection properties contracts
https://issues.shibboleth.net/jira/browse/MDA-222